# GTK3_Simple-Text-Editor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
include/: SAP.hh  SAV.hh  component.h  system.h  window.h
include/Window/: Window.hh
include/codec/: audio.hh
src/: SAP.cc  SAV.cc
